# world_cup_prediction

./: .gitignore  README.md  debug_data.py  dockerfile  download_club_data.py  gui.py  live_predictor.py  pretrained_clubs.pth  pyproject.toml  req.txt  requirements.txt  tournament_state.pkl  update_memory.py  world_cup_final_model.pth  world_cup_model.py  world_cup_model_weights.pth
app/: gui.py
data/: club_results.csv  teams_mapping.json
scripts/: download_club_data.py  merge_squad_data.py
src/world_cup_prediction/: __init__.py  config.py  dataset.py  elo.py  features.py  memory.py  model.py  predictor.py  train.py
