[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-prediction"
version = "1.0.0"
description = "AI-powered football match predictor using Transformer neural networks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "pandas",
    "numpy",
    "scipy",
    "streamlit",
]

[tool.setuptools.packages.find]
where = ["src"]
